[feat]: add sidebar, nav, home and guards

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,11 @@
 <section>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-2">
-        <app-sidebar></app-sidebar>
-      </div>
-      <div class="col-md-10">
-        <app-nav></app-nav>
-        <router-outlet></router-outlet>
-      </div>
+  <div class="row me-0">
+    <div class="col-md-2">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-md-10">
+      <app-nav></app-nav>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </section>
