--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,1 +1,29 @@
-<p>nav works!</p>
+<nav class="d-flex justify-content-between align-items-center">
+  <div class="search"></div>
+  <div class="dropdown">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <img class="me-3" src="../../../assets/images/home/user-icon.svg" alt="">
+      {{username}}
+    </a>
+    <ul class="dropdown-menu dropdown-menu">
+      <li>
+        <a class="dropdown-item" routerLink="#">
+          <i class="fa-solid fa-user-large"></i>
+          Profile
+        </a>
+      </li>
+      <li>
+        <a class="dropdown-item" routerLink="#">
+          <i class="fa-solid fa-unlock"></i>
+        Change Password
+      </a>
+      </li>
+      <li>
+        <a class="dropdown-item" routerLink="/auth" (click)="logout()">
+          <i class="fa-solid fa-right-from-bracket"></i>
+        Logout
+      </a>
+      </li>
+    </ul>
+  </div>
+</nav>
