--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,14 @@
-<p>sidebar works!</p>
+<section class="sidebar pt-5">
+  <img src="../../../assets/images/sidebar-logo.svg" alt="">
+  <ul class="links list-unstyled mt-5">
+    <ng-container *ngFor="let item of menu">
+      <li *ngIf="item.isActive">
+        <a [routerLink]="'/' + item.link" routerLinkActive="active">
+          <img [src]='"../../../assets/icons/" + item.icon + ".svg"' alt="">
+          {{item.text}}
+        </a>
+      </li>
+    </ng-container>
+
+  </ul>
+</section>
