--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
-body, html {
-  position: relative;
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+// body, html {
+//   position: relative;
+// }
+
+$mainColor: #4AA35A;
+$greyColor: #494949;
+$greyColor2: #3A3A3D;
+
 .main-color {
-  color: #4AA35A;
+  color: $mainColor;
 }
 
 .bg-main-color {
-  background-color: #4AA35A;
+  background-color: $mainColor;
 }
 
 .grey-color {
-  color: #494949;
+  color: $greyColor;
   opacity: 0.6;
 }
 
 .grey-color-2 {
-  color: #3A3A3D;
+  color: $greyColor2;
 }
 
-$grey-color: #3A3A3D
+.main-btn {
+  border: none;
+  outline: none;
+  padding: 8px 15px;
+  color: #fff;
+  background-color: $mainColor;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  &:hover {
+    background-color: $mainColor;
+    opacity: 0.85;
+  }
+}
