--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -7,16 +7,15 @@
                 [style.animationDelay]="i * 0.1 + 's'">
                 {{ char }}
               </span>
-            </span></h2>
+            </span>
+          </h2>
           <p>This is a welcoming screen for the entry of the application , you can now see the options</p>
         </div>
       </div>
-      <div class="col-md-4 text-end text-sm-center">
+      <div class="col-md-4 home-image text-end text-sm-center">
         <img class="w-75" src="../../../assets/images/home/avatar.svg" alt="Home picture">
       </div>
     </div>
-
-
     <div class="row row-section justify-content-between">
       <div class="col-md-8">
         <h4>Fill the <span class="main-color">Recipes</span> !</h4>
