--- a/src/app/feature/auth/components/register/register.component.scss
+++ b/src/app/feature/auth/components/register/register.component.scss
@@ -1,6 +1,6 @@
 .auth-sec {
   min-height: 100vh;
-  background: url(../../../../assets/images/auth/background-auth.png) no-repeat center;
+  background: url(../../../../../assets/images/auth/background-auth.png) no-repeat center;
   background-size: cover;
   display: flex;
   justify-content: center;
