--- a/src/app/feature/auth/components/request-reset-password/request-reset-password.component.scss
+++ b/src/app/feature/auth/components/request-reset-password/request-reset-password.component.scss
@@ -1,7 +1,7 @@
 
 .auth-sec {
   height: 100vh;
-  background: url(../../../../assets/images/auth/background-auth.png) no-repeat center;
+  background: url(../../../../../assets/images/auth/background-auth.png) no-repeat center;
   background-size: cover;
   display: flex;
   justify-content: center;
