--- a/src/app/feature/dashboard/modules/admin/modules/recipes/recipes.component.html
+++ b/src/app/feature/dashboard/modules/admin/modules/recipes/recipes.component.html
@@ -1,7 +1,7 @@
-<section class="categories me-4">
+<section class="recipes me-4">
   <div class="row header-row align-items-center px-3 py-3">
     <div class="col-md-8">
-      <div class="categories-header ps-md-4 pt-sm-3">
+      <div class="recipes-header ps-md-4 pt-sm-3">
         <h2 class="text-start">
           <span class="wave-container">
             <span *ngFor="let char of waveUsername; let i = index" class="wave-char"
@@ -14,61 +14,76 @@
       </div>
     </div>
     <div class="col-md-4 text-end">
-      <img class="categories-image" src="../../../assets/images/categories/categories.svg" alt="categories picture">
+      <img class="recipes-image" src="../../../../../../../assets/images/categories/categories.svg" alt="recipes picture">
     </div>
   </div>
   <div class="details">
     <div class="row">
       <div class="col-md-8">
-        <h3>Categories Table Details</h3>
-        <p>Categories Table Details</p>
+        <h3>Recipes Table Details</h3>
+        <p>Recipes Table Details</p>
       </div>
       <div class="col-md-4 text-end">
-        <button class="btn btn-success" (click)="openDialog(null, 'Add')">Add New Category</button>
+        <button class="btn btn-success" (click)="openDialog(null, 'Add')">Add New Recipes</button>
       </div>
     </div>
   </div>
   <div class="table-responsive">
-    <input type="text" class="form-control mb-2" [(ngModel)]="searchVal" (keyup)="getAllCategories()">
+    <input type="text" class="form-control mb-2" [(ngModel)]="searchVal" (keyup)="getAllRecipes()">
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Creation Date</th>
-          <th scope="col">Modification Date</th>
-          <th scope="col">Actions</th>
+          <th scope="col">Item Name</th>
+          <th scope="col">Image</th>
+          <th scope="col">Price</th>
+          <th scope="col">Description</th>
+          <th scope="col">Tag</th>
+          <th scope="col">Category</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
 
-        <tr *ngFor="let category of categories; let isEven = even" [ngClass]="isEven ? 'bg-white' : 'bg-light'">
-          <td>{{category.name}}</td>
-          <td>{{category.creationDate | date: 'mm/dd/yyyy'}}</td>
-          <td>{{category.modificationDate | date: 'mm/dd/yyyy'}}</td>
+        <tr *ngFor="let recipe of recipes; let isEven = even" [ngClass]="isEven ? 'bg-white' : 'bg-light'">
+          <td>{{recipe.name}}</td>
+          <td>
+            <img [src]="recipe.imagePath" alt="">
+            <ng-container *ngIf="recipe.imagePath === null">
+              <img width="100px" class="rounded-2" src="../../../assets/sidebar-logo.svg" alt="recipe image">
+            </ng-container>
+          </td>
+          <td>{{recipe.price}}</td>
+          <td>{{recipe.description}}</td>
+          <td>{{recipe.tag.name}}</td>
+          <td>
+            <ng-container *ngFor="let item of recipe.category">
+              {{item.name}}
+            </ng-container>
+          </td>
           <td>
             <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
               <mat-icon>more_horiz</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-              <button class="text-success" mat-menu-item (click)="openDialog(category, 'View')">
+              <button class="text-success" mat-menu-item (click)="openDialog(recipe, 'View')">
                 <mat-icon class="text-success">visibility</mat-icon>
                 <span>View</span>
               </button>
-              <button class="text-primary" mat-menu-item (click)="openDialog(category, 'Update')">
+              <button class="text-primary" mat-menu-item (click)="openDialog(recipe, 'Update')">
                 <mat-icon class="text-primary">edit</mat-icon>
                 <span>Edit</span>
               </button>
-              <button class="text-danger" mat-menu-item (click)="openDeleteDialog(category)">
+              <button class="text-danger" mat-menu-item (click)="openDeleteDialog(recipe)">
                 <mat-icon class="text-danger">delete</mat-icon>
                 <span>Delete</span>
               </button>
             </mat-menu>
           </td>
         </tr>
-        <tr *ngIf="categories.length == 0" >
+        <tr *ngIf="recipes.length == 0" >
           <td colspan="4" class="text-center">
             <img src="../../../../../../../assets/images/not-found/not-found-person.svg" alt="">
-            <p class="mt-3 lead">There is no category with this name</p>
+            <p class="mt-3 lead">There is no recipe with this name</p>
           </td>
         </tr>
       </tbody>
