--- a/src/app/feature/dashboard/modules/admin/modules/recipes/recipes.component.scss
+++ b/src/app/feature/dashboard/modules/admin/modules/recipes/recipes.component.scss
@@ -3,7 +3,7 @@
   border-radius: 15px;
   padding: 1rem;
   margin-bottom: 15px;
-  .categories-header {
+  .recipes-header {
     color: white;
     height: 100%;
     display: flex;
@@ -29,7 +29,7 @@
       }
     }
   }
-  .categories-image {
+  .recipes-image {
     width: 8rem;
     animation: fade 1.5s infinite ease-in-out;
     -webkit-animation: fade 1.5s infinite ease-in-out;
