--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,8 +1,8 @@
 .sidebar {
   background-color: #1F263E;
   min-height: 100%;
-  width: 14%;
-  position: fixed;
+  width: 80%;
+  height: 100vh;
   border-radius: 0 58px 0 0;
   -webkit-border-radius: 0 58px 0 0;
   -moz-border-radius: 0 58px 0 0;
