--- a/src/app/feature/dashboard/modules/admin/modules/categories/categories.component.scss
+++ b/src/app/feature/dashboard/modules/admin/modules/categories/categories.component.scss
@@ -1,42 +1,7 @@
-.header-row {
-  background-color: #009247;
-  border-radius: 15px;
-  padding: 1rem;
-  margin-bottom: 15px;
-  .categories-header {
-    color: white;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    .wave-container {
-      display: inline-flex;
-      .wave-char {
-        display: inline-block;
-        font-family: inherit;
-        font-size: inherit;
-        animation: wave 1s ease-in-out;
-        animation-delay: 0s;
-        -webkit-animation: wave 1s ease-in-out;
-        @keyframes wave {
-          0%, 100% {
-            transform: translateY(0);
-          }
-          50% {
-            transform: translateY(-30px);
-          }
-        }
-      }
-    }
-  }
-  .categories-image {
-    width: 8rem;
-    animation: fade 1.5s infinite ease-in-out;
-    -webkit-animation: fade 1.5s infinite ease-in-out;
-}
-}
-
 .table-responsive {
+  mat-form-field {
+    width: 100%;
+  }
   .table {
     border-radius: 10px;
     overflow: hidden;
@@ -60,32 +25,3 @@
     }
   }
 }
-
-@media screen and (max-width: 768px) and (min-width: 320px) {
-  .header-row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  img {
-    width: 20rem !important;
-  }
-}
-
-@keyframes fade {
-  0%, 100% {
-    transform: translate(0);
-    -webkit-transform: translate(0);
-    -moz-transform: translate(0);
-    -ms-transform: translate(0);
-    -o-transform: translate(0);
-  }
-  50% {
-  transform: translateY(10px);
-  -webkit-transform: translateY(10px);
-  -moz-transform: translateY(10px);
-  -ms-transform: translateY(10px);
-  -o-transform: translateY(10px);
-}
-}
-
