--- a/src/app/feature/dashboard/modules/admin/modules/recipes/recipes.component.html
+++ b/src/app/feature/dashboard/modules/admin/modules/recipes/recipes.component.html
@@ -1,22 +1,5 @@
 <section class="recipes me-4">
-  <div class="row header-row align-items-center px-3 py-3">
-    <div class="col-md-8">
-      <div class="recipes-header ps-md-4 pt-sm-3">
-        <h2 class="text-start">
-          <span class="wave-container">
-            <span *ngFor="let char of waveUsername; let i = index" class="wave-char"
-              [style.animationDelay]="i * 0.1 + 's'">
-              {{ char }}
-            </span>
-          </span>
-        </h2>
-        <p>You can now add your items that any user can order it from the Application and you can edit</p>
-      </div>
-    </div>
-    <div class="col-md-4 text-end">
-      <img class="recipes-image" src="../../../../../../../assets/images/categories/categories.svg" alt="recipes picture">
-    </div>
-  </div>
+  <app-header headerTitle="Recipes"></app-header>
   <div class="details">
     <div class="row">
       <div class="col-md-8">
@@ -24,12 +7,47 @@
         <p>Recipes Table Details</p>
       </div>
       <div class="col-md-4 text-end">
-        <button class="btn btn-success" (click)="openDialog(null, 'Add')">Add New Recipes</button>
+        <button class="btn btn-success" routerLink="addRecipe">Add New Recipes</button>
       </div>
     </div>
   </div>
   <div class="table-responsive">
-    <input type="text" class="form-control mb-2" [(ngModel)]="searchVal" (keyup)="getAllRecipes()">
+    <div class="filter-container">
+      <div class="row">
+      <!-- input search -->
+        <div class="col-md-12 col-lg-7">
+          <mat-form-field class="filter-input w-100 mt-4 mb-4 m-lg-0" >
+            <mat-label>Filter</mat-label>
+            <input type="text" matInput [(ngModel)]="searchVal" (keyup)="getAllRecipes()" placeholder="Ex. Pizza">
+          </mat-form-field>
+        </div>
+        <!-- Tag ID (Dropdown) -->
+        <div class="col-md-5 col-lg-2">
+          <mat-form-field class="mb-4 m-lg-0">
+            <mat-label>Tag</mat-label>
+            <mat-select [(ngModel)]="tagId" (selectionChange)="getAllRecipes()">
+              <mat-option [value]="0">All</mat-option>
+              <mat-option *ngFor="let tag of tagList" [value]="tag.id">{{ tag.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <!-- Category ID (Dropdown) -->
+        <div class="col-md-5 col-lg-2">
+          <mat-form-field class="mb-4 m-lg-0">
+            <mat-label>Category</mat-label>
+            <mat-select [(ngModel)]="catId" (selectionChange)="getAllRecipes()">
+              <mat-option [value]="0">All</mat-option>
+              <mat-option *ngFor="let cat of categoriesList" [value]="cat.id">{{ cat.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-md-2 col-lg-1 d-flex align-items-center">
+          <div class="d-none d-md-block">
+            <mat-icon class="clear-btn" (click)="clearFilter()">clear</mat-icon>
+          </div>
+        </div>
+      </div>
+    </div>
     <table class="table">
       <thead>
         <tr>
@@ -43,21 +61,20 @@
         </tr>
       </thead>
       <tbody>
-
-        <tr *ngFor="let recipe of recipes; let isEven = even" [ngClass]="isEven ? 'bg-white' : 'bg-light'">
+        <tr *ngFor="let recipe of tableResponse?.data; let isEven = even" [ngClass]="isEven ? 'bg-white' : 'bg-light'">
           <td>{{recipe.name}}</td>
           <td>
-            <img [src]="recipe.imagePath" alt="">
+            <img class="recipe-image" [src]="recipe.imagePath ? recipe.imagePath : '../../../../../../../assets/images/logo/sidebar-logo.svg'" alt="">
             <ng-container *ngIf="recipe.imagePath === null">
-              <img width="100px" class="rounded-2" src="../../../assets/sidebar-logo.svg" alt="recipe image">
+              <img width="100px" class="rounded-2" src="assets/sidebar-logo.svg" alt="recipe image">
             </ng-container>
           </td>
           <td>{{recipe.price}}</td>
-          <td>{{recipe.description}}</td>
+          <td>{{ recipe.description.length > 20 ? (recipe.description | slice:0:20) + ' ...' : recipe.description }}</td>
           <td>{{recipe.tag.name}}</td>
           <td>
-            <ng-container *ngFor="let item of recipe.category">
-              {{item.name}}
+            <ng-container *ngFor="let item of recipe.category; let last = last">
+              <span class="category">{{ item.name }}{{ last ? '' : ', ' }}</span>
             </ng-container>
           </td>
           <td>
@@ -65,11 +82,11 @@
               <mat-icon>more_horiz</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-              <button class="text-success" mat-menu-item (click)="openDialog(recipe, 'View')">
+              <button class="text-success" mat-menu-item (click)="openViewDialog(recipe)">
                 <mat-icon class="text-success">visibility</mat-icon>
                 <span>View</span>
               </button>
-              <button class="text-primary" mat-menu-item (click)="openDialog(recipe, 'Update')">
+              <button class="text-primary" mat-menu-item routerLink="edit/{{recipe.id}}">
                 <mat-icon class="text-primary">edit</mat-icon>
                 <span>Edit</span>
               </button>
@@ -80,9 +97,9 @@
             </mat-menu>
           </td>
         </tr>
-        <tr *ngIf="recipes.length == 0" >
-          <td colspan="4" class="text-center">
-            <img src="../../../../../../../assets/images/not-found/not-found-person.svg" alt="">
+        <tr *ngIf="tableResponse?.totalNumberOfRecords == 0" >
+          <td colspan="7" class="text-center">
+            <img src="assets/images/not-found/not-found-person.svg" alt="">
             <p class="mt-3 lead">There is no recipe with this name</p>
           </td>
         </tr>
