--- a/src/app/shared/not-found/not-found.component.html
+++ b/src/app/shared/not-found/not-found.component.html
@@ -1,14 +1,16 @@
 <section class="not-found">
   <div class="container">
     <div class="logo">
-      <img src=".//../../../assets/images/logo/logo-auth.svg" alt="">
+      <img src="assets/images/logo/logo-auth.svg" alt="">
     </div>
-    <h4>Oops.... </h4>
-    <p>Page  not found </p>
-    <p>This Page doesn’t exist or was removed! We suggest you  back to home.</p>
-    <button>
+    <h4 class="oops">Oops. <span class="page-not">Page not found </span></h4>
+    <p class="desc">This Page doesn’t exist or was removed! <br> We suggest you  back to home.</p>
+    <button class="d-flex justify-content-center align-items-center gap-3" routerLink="/dashboard/home">
       <i class="fa-solid fa-arrow-left-long"></i>
-      Back To Home
+      <div>
+        <span>Back To <br> Home</span>
+      </div>
     </button>
   </div>
+  <img class="man-not-found" src="../../../assets/images/not-found/not-found-page.svg" alt="">
 </section>
