[feat]: complete fav

--- a/src/app/feature/dashboard/modules/admin/modules/recipes/components/add-edit-recipes/add-edit-recipes.component.html
+++ b/src/app/feature/dashboard/modules/admin/modules/recipes/components/add-edit-recipes/add-edit-recipes.component.html
@@ -77,7 +77,7 @@
     <!-- Action Buttons -->
     <div class="btns-container d-flex justify-content-between mt-4">
       <button class="cancel" mat-raised-button routerLink="/dashboard/admin/recipes">Cancel</button>
-      <button class="save" mat-raised-button type="submit" routerLink="/dashboard/admin/recipes">
+      <button class="save" mat-raised-button type="submit">
         Save
       </button>
     </div>
