--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -2,18 +2,18 @@
   <div class="search"></div>
   <div class="dropdown">
     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-      <img class="me-3" src="../../../assets/images/home/user-icon.svg" alt="">
+      <img class="me-3" src="assets/images/home/user-icon.svg" alt="user">
       {{username}}
     </a>
     <ul class="dropdown-menu dropdown-menu">
       <li>
-        <a class="dropdown-item" routerLink="#">
+        <a class="dropdown-item" routerLink="/dashboard/profile">
           <i class="fa-solid fa-user-large"></i>
           Profile
         </a>
       </li>
       <li>
-        <a class="dropdown-item" routerLink="#">
+        <a class="dropdown-item" routerLink="/dashboard/change-password">
           <i class="fa-solid fa-unlock"></i>
         Change Password
       </a>
