--- a/src/app/feature/dashboard/modules/admin/modules/recipes/components/view-recipes/view-recipes.component.scss
+++ b/src/app/feature/dashboard/modules/admin/modules/recipes/components/view-recipes/view-recipes.component.scss
@@ -22,7 +22,7 @@
   img {
     width: 14rem;
     border-radius: 10px;
-    margin: 45px 0 15px;
+    margin: 20px 0 15px;
     animation: fade 1.5s infinite ease-in-out;
   }
   .view-title {
@@ -36,12 +36,30 @@
   .view-price {
     position: absolute;
     bottom: 0;
-    right: 0;
+    left: 0;
     background-color: #009247;
     color: #fff;
     padding: 5px 15px;
-    border-radius: 9px 0 0 9px;
-
+    border-radius: 0 9px 9px 0 ;
+  }
+  .favorite {
+    border-top: 3px solid #F7F7F7;
+    margin-top: 20px;
+    padding-top: 17px;
+    text-align: right;
+    button {
+      background: none;
+      outline: none;
+      border: 1px solid #1F263E;
+      color: #1F263E;
+      border-radius: 6px;
+      padding: 5px 15px;
+      transition: .2s;
+      &:hover {
+        background-color: #1F263E;
+        color: #fff;
+      }
+    }
   }
 }
 
