--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -3,6 +3,14 @@ nav {
   padding: 5px 75px;
   background-color: #F8F9FB;
   border-radius: 16px;
+  .nav-link {
+    img {
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
   .dropdown-menu {
     width: 12rem;
     li a {
