[fear]: new updates

--- a/src/app/feature/dashboard/modules/admin/modules/users/components/view-user/view-user.component.scss
+++ b/src/app/feature/dashboard/modules/admin/modules/users/components/view-user/view-user.component.scss
@@ -1,7 +1,7 @@
 .view-user {
   text-align: center;
   position: relative;
-  width: 33rem;
+  // width: 33rem;
   .closeIcon {
     cursor: pointer;
     color: #CC0000;
