--- a/src/app/feature/dashboard/modules/user/modules/favorites/favorites.component.html
+++ b/src/app/feature/dashboard/modules/user/modules/favorites/favorites.component.html
@@ -3,7 +3,7 @@
     <img class="not-found-fav" src="assets/images/not-found/not-found-person.svg" alt="">
   </div>
   <div class="row">
-    <div *ngFor="let item of favorites" class="col-12 col-md-6 col-lg-4">
+    <div *ngFor="let item of favorites" class="col-12 col-md-6 col-lg-4 mb-5">
       <mat-card class="example-card">
         <img mat-card-image [src]="item.recipe.imagePath" alt="Food Image">
         <i class="fa-solid fa-heart" (click)="deleteFav(item.id)"></i>
