--- a/src/app/feature/dashboard/modules/user/modules/favorites/favorites.component.scss
+++ b/src/app/feature/dashboard/modules/user/modules/favorites/favorites.component.scss
@@ -5,9 +5,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    height: 100%;
   }
   mat-card {
     border-radius: 16px;
+    // height: 11rem;
+    margin-bottom: 15px;
+    height: 100%;
     img {
       height: 350px;
       object-fit: cover;
