--- a/src/app/feature/auth/auth.component.html
+++ b/src/app/feature/auth/auth.component.html
@@ -5,6 +5,8 @@
         <img src="../../assets/images/logo/logo-auth.svg" alt="" class="d-block m-auto mb-2">
         <h2>Login</h2>
         <p class="grey-color">Welcome Back! Please enter your details</p>
+        <p class="grey-color m-0 mb-1">[for test: Admin mail: youssefrafat70&#64;gmail.com, password: 123YYyy&#64;&#64; ]</p>
+        <p class="grey-color m-0 mb-1">[for test: user mail: youssefrafat70000&#64;gmail.com, password: 123YYyy&#64;&#64; ]</p>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
           <div class="input-group mb-3">
             <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-envelope grey-color"></i></span>
